wrappers/python/virgil_crypto_lib/foundation/_c_bridge/_vscf_compound_key_alg.py


    def vscf_compound_key_alg_export_private_key_data(self, ctx, private_key, out):
        """Export private key to the raw binary format without algorithm information.

        Binary format must be defined in the key specification.
        For instance, RSA private key must be exported in format defined in
        RFC 3447 Appendix A.1.2."""
        vscf_compound_key_alg_export_private_key_data = self._lib.vscf_compound_key_alg_export_private_key_data
        vscf_compound_key_alg_export_private_key_data.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), POINTER(vsc_buffer_t)]
        vscf_compound_key_alg_export_private_key_data.restype = c_int
        return vscf_compound_key_alg_export_private_key_data(ctx, private_key, out)

    def vscf_compound_key_alg_can_encrypt(self, ctx, public_key, data_len):
        """Check if algorithm can encrypt data with a given key."""
        vscf_compound_key_alg_can_encrypt = self._lib.vscf_compound_key_alg_can_encrypt
        vscf_compound_key_alg_can_encrypt.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_size_t]
        vscf_compound_key_alg_can_encrypt.restype = c_bool
        return vscf_compound_key_alg_can_encrypt(ctx, public_key, data_len)

    def vscf_compound_key_alg_encrypted_len(self, ctx, public_key, data_len):
        """Calculate required buffer length to hold the encrypted data."""
        vscf_compound_key_alg_encrypted_len = self._lib.vscf_compound_key_alg_encrypted_len
        vscf_compound_key_alg_encrypted_len.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_size_t]
        vscf_compound_key_alg_encrypted_len.restype = c_size_t
        return vscf_compound_key_alg_encrypted_len(ctx, public_key, data_len)

    def vscf_compound_key_alg_encrypt(self, ctx, public_key, data, out):
        """Encrypt data with a given public key."""
        vscf_compound_key_alg_encrypt = self._lib.vscf_compound_key_alg_encrypt
        vscf_compound_key_alg_encrypt.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_compound_key_alg_encrypt.restype = c_int
        return vscf_compound_key_alg_encrypt(ctx, public_key, data, out)

    def vscf_compound_key_alg_can_decrypt(self, ctx, private_key, data_len):
        """Check if algorithm can decrypt data with a given key.
        However, success result of decryption is not guaranteed."""
        vscf_compound_key_alg_can_decrypt = self._lib.vscf_compound_key_alg_can_decrypt
        vscf_compound_key_alg_can_decrypt.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_size_t]
        vscf_compound_key_alg_can_decrypt.restype = c_bool
        return vscf_compound_key_alg_can_decrypt(ctx, private_key, data_len)

    def vscf_compound_key_alg_decrypted_len(self, ctx, private_key, data_len):
        """Calculate required buffer length to hold the decrypted data."""
        vscf_compound_key_alg_decrypted_len = self._lib.vscf_compound_key_alg_decrypted_len
        vscf_compound_key_alg_decrypted_len.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_size_t]
        vscf_compound_key_alg_decrypted_len.restype = c_size_t
        return vscf_compound_key_alg_decrypted_len(ctx, private_key, data_len)

    def vscf_compound_key_alg_decrypt(self, ctx, private_key, data, out):
        """Decrypt given data."""
        vscf_compound_key_alg_decrypt = self._lib.vscf_compound_key_alg_decrypt
        vscf_compound_key_alg_decrypt.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_compound_key_alg_decrypt.restype = c_int
        return vscf_compound_key_alg_decrypt(ctx, private_key, data, out)

    def vscf_compound_key_alg_can_sign(self, ctx, private_key):
        """Check if algorithm can sign data digest with a given key."""
        vscf_compound_key_alg_can_sign = self._lib.vscf_compound_key_alg_can_sign
        vscf_compound_key_alg_can_sign.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t)]
        vscf_compound_key_alg_can_sign.restype = c_bool
        return vscf_compound_key_alg_can_sign(ctx, private_key)

    def vscf_compound_key_alg_signature_len(self, ctx, private_key):
        """Return length in bytes required to hold signature.
        Return zero if a given private key can not produce signatures."""
        vscf_compound_key_alg_signature_len = self._lib.vscf_compound_key_alg_signature_len
        vscf_compound_key_alg_signature_len.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t)]
        vscf_compound_key_alg_signature_len.restype = c_size_t
        return vscf_compound_key_alg_signature_len(ctx, private_key)

    def vscf_compound_key_alg_sign_hash(self, ctx, private_key, hash_id, digest, signature):
        """Sign data digest with a given private key."""
        vscf_compound_key_alg_sign_hash = self._lib.vscf_compound_key_alg_sign_hash
        vscf_compound_key_alg_sign_hash.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_int, vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_compound_key_alg_sign_hash.restype = c_int
        return vscf_compound_key_alg_sign_hash(ctx, private_key, hash_id, digest, signature)

    def vscf_compound_key_alg_can_verify(self, ctx, public_key):
        """Check if algorithm can verify data digest with a given key."""
        vscf_compound_key_alg_can_verify = self._lib.vscf_compound_key_alg_can_verify
        vscf_compound_key_alg_can_verify.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t)]
        vscf_compound_key_alg_can_verify.restype = c_bool
        return vscf_compound_key_alg_can_verify(ctx, public_key)

    def vscf_compound_key_alg_verify_hash(self, ctx, public_key, hash_id, digest, signature):
        """Verify data digest with a given public key and signature."""
        vscf_compound_key_alg_verify_hash = self._lib.vscf_compound_key_alg_verify_hash
        vscf_compound_key_alg_verify_hash.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), c_int, vsc_data_t, vsc_data_t]
        vscf_compound_key_alg_verify_hash.restype = c_bool
        return vscf_compound_key_alg_verify_hash(ctx, public_key, hash_id, digest, signature)

    def vscf_compound_key_alg_setup_defaults(self, ctx):
        """Setup predefined values to the uninitialized class dependencies."""
        vscf_compound_key_alg_setup_defaults = self._lib.vscf_compound_key_alg_setup_defaults
        vscf_compound_key_alg_setup_defaults.argtypes = [POINTER(vscf_compound_key_alg_t)]
        vscf_compound_key_alg_setup_defaults.restype = c_int
        return vscf_compound_key_alg_setup_defaults(ctx)

    def vscf_compound_key_alg_make_key(self, ctx, cipher_key, signer_key, error):
        """Make compound private key from given.

        Note, this operation might be slow."""
        vscf_compound_key_alg_make_key = self._lib.vscf_compound_key_alg_make_key
        vscf_compound_key_alg_make_key.argtypes = [POINTER(vscf_compound_key_alg_t), POINTER(vscf_impl_t), POINTER(vscf_impl_t), POINTER(vscf_error_t)]
        vscf_compound_key_alg_make_key.restype = POINTER(vscf_impl_t)
        return vscf_compound_key_alg_make_key(ctx, cipher_key, signer_key, error)

    def vscf_compound_key_alg_shallow_copy(self, ctx):
        vscf_compound_key_alg_shallow_copy = self._lib.vscf_compound_key_alg_shallow_copy
        vscf_compound_key_alg_shallow_copy.argtypes = [POINTER(vscf_compound_key_alg_t)]
        vscf_compound_key_alg_shallow_copy.restype = POINTER(vscf_compound_key_alg_t)
        return vscf_compound_key_alg_shallow_copy(ctx)

    def vscf_compound_key_alg_impl(self, ctx):
        vscf_compound_key_alg_impl = self._lib.vscf_compound_key_alg_impl
        vscf_compound_key_alg_impl.argtypes = [POINTER(vscf_compound_key_alg_t)]
        vscf_compound_key_alg_impl.restype = POINTER(vscf_impl_t)
        return vscf_compound_key_alg_impl(ctx)
